crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__predicates__select_where_album_id_is_not_null.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Title": "Killers"
      },
      {
        "Title": "Live After Death"
      },
      {
        "Title": "Live At Donington 1992 (Disc 1)"
      },
      {
        "Title": "Live At Donington 1992 (Disc 2)"
      },
      {
        "Title": "No Prayer For The Dying"
      }
    ]
  }
]
