crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__predicates__select_where_array_relationship.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "albums": {
          "rows": [
            {
              "title": "Supernatural"
            },
            {
              "title": "Santana - As Years Go By"
            },
            {
              "title": "Santana Live"
            }
          ]
        },
        "title": "Santana"
      }
    ]
  }
]
