crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__predicates__select_where_name_niregex.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 1,
        "Title": "For Those About To Rock We Salute You"
      },
      {
        "AlbumId": 2,
        "Title": "Balls to the Wall"
      },
      {
        "AlbumId": 3,
        "Title": "Restless and Wild"
      },
      {
        "AlbumId": 4,
        "Title": "Let There Be Rock"
      },
      {
        "AlbumId": 5,
        "Title": "Big Ones"
      }
    ]
  }
]
